# threes-a-chorus

./: .clang-format  BUILD.md  README.md  dockerbuild.sh
client/: .gitignore  CMakeLists.txt  README.md  ultrasonic.c
client/app/: CMakeLists.txt
client/app/examples/: eyesExample.h  melodyGenExample.h  rfidExample.h  tcpExample.h  ultrasonicExample.h
client/app/include/: app.h  beatsync.h  eyesExample.h  melodyGenExample.h  midiPlayer.h  netMidiPlayer.h  rfidExample.h  sensory.h  shutdown.h  singer.h  spiExample.h  tcpExample.h
client/app/src/: app.c  beatsync.c  main.c  main_BACKUP_5428.c  main_REMOTE_5428.c  midiPlayer.c  netMidiPlayer.c  sensory.c  shutdown.c  singer.c
client/common/: CMakeLists.txt
client/common/include/com/: config.h  fileio.h  flowerconfig.h  fuzzyconfig.h  pwl.h  stickersconfig.h  timeutils.h  utils.h
client/common/src/: fileio.c  pwl.c  timeutils.c  utils.c
client/das/: CMakeLists.txt
client/das/include/das/: '  cbuffer.h  envelope.h  example.h  fm.h  fmplayer.h  melodygen.h  sequencer.h  wavetable.h
client/das/include/das/example/: dasExample.h
client/das/src/: cbuffer.c  envelope.c  fm.c  fmplayer.c  melodygen.c  sequencer.c  wavetable.c
client/env/: 82-spi-noroot.rules  uEnv.txt
client/hal/: CMakeLists.txt
client/hal/include/hal/: accel.h  adc.h  button.h  gpio.h  i2c.h  pwm.h  rfid.h  segDisplay.h  spi.h  tcp.h  timeutils.h  udp.h  ultrasonic.h
client/hal/src/: accel.c  adc.c  button.c  gpio.c  i2c.c  pwm.c  rfid.c  segDisplay.c  spi.c  tcp.c  timeutils.c  udp.c  ultrasonic.c
env/client/: configureSpidev.sh  tac.service  uEnv.txt
env/docker/: Dockerfile
env/server/: tac.service
midis/: ageofconsent.mid  scale.mid
server/: CMakeLists.txt  compile_commands.json
server/app/: CMakeLists.txt
server/app/include/: beatsync.h  midiPlayer.h  server.h  tcp.h  udp.h
server/app/src/: beatsync.c  main.c  midiPlayer.c  server.c  tcp.c  udp.c
server/hal/: CMakeLists.txt
server/hal/include/hal/: placeholder.h  segDisplay.h  timeutils.h
server/hal/src/: fileio.c  i2c.c  placeholder.c  segDisplay.c  timeutils.c
server/lib/: CMakeLists.txt
server/lib/midi-parser/: CMakeLists.txt  README.md
server/lib/midi-parser/include/: midi-parser.h
server/lib/midi-parser/src/: midi-parser.c
server/lib/src/: midi-parser.c
utils/: CMakeLists.txt
utils/include/: fileUtils.h  utils.h
utils/src/: fileUtils.c  utils.c
